# MessagIST

./: .editorconfig  .gitignore  Cargo.toml  README.md
certs/: ca.crt  ca.key  database.crt  database.csr  database.key  server.crt  server.csr  server.key
crates/client/: Cargo.toml
crates/client/src/: app.rs  client_handler.rs  lib.rs  logger.rs  main.rs  message_data.rs  notifications.rs
crates/client/src/db/: database.rs  mod.rs  structs.rs
crates/client/src/ui/: event_handler.rs  mod.rs  routing.rs  theming.rs
crates/client/src/ui/pages/: add_contact.rs  connect.rs  entry.rs  login.rs  main.rs  mod.rs  register.rs
crates/client/src/ui/pages/add_contact/: manual.rs  search.rs
crates/client/src/ui/pages/connect/: handler.rs  widget.rs
crates/client/src/ui/pages/entry/: handler.rs  state.rs  widget.rs
crates/client/src/ui/pages/login/: handler.rs  state.rs  widget.rs
crates/client/src/ui/pages/main/: logout_popup.rs  profile_popup.rs  state.rs  tabs.rs  widget.rs
crates/client/src/ui/pages/main/tabs/: contacts.rs  messages.rs
crates/client/src/ui/pages/register/: handler.rs  state.rs  widget.rs
crates/client/src/ui/widgets/: button.rs  contact_info.rs  contact_list.rs  cursor.rs  dm_card.rs  dm_list.rs  logger.rs  messagist_text.rs  mod.rs  opened_chat.rs  text_box.rs  title.rs
crates/server/: Cargo.toml  Rocket.toml  build.rs
crates/server/src/: handlers.rs  main.rs  notify.rs  session.rs  user_cache.rs
crates/server/src/db/: database.rs  mod.rs  structs.rs  utils.rs
database/: init.sql  pg_hba.conf  postgresql.conf
(+20 files in other folders)
