[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
tachyonfx = "0.10.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "sqlx-macros"] }
reqwest = { version = "0.12.9", features = ["cookies", "json"] }
protocol = { path = "../protocol" }
cryptolib = { path = "../cryptolib" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
reqwest-websocket = "0.4.3"
tokio = { version = "1.42.0", features = ["full", "rt"] }
futures-util = "0.3.31"
chrono = "0.4"
rand = "0.8.5"
async-tungstenite = "0.28.2"
anyhow = "1.0.94"
log = { version = "0.4.22", features = ["std"] }
tui-widget-list = "0.13.0"
base64 = "0.22.1"

[target."cfg(unix)".dependencies]
libsqlite3-sys = { version = "0.30.1", features = ["sqlcipher"] }
